<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider_line"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:showDividers="middle|end">


        <TextView
            android:id="@+id/change_language_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/app_change_language" />

        <TextView
            android:id="@+id/request_read_permission_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/app_request_read_permission"
            android:visibility="visible" />

        <TextView
            android:id="@+id/open_service_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/app_open_service"
            android:visibility="visible" />

        <TextView
            android:id="@+id/send_notification_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/app_send_notification"
            android:visibility="visible" />
    </LinearLayout>
</layout>